--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,7 +14,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install dependencies
       run: lein deps
-    - name: Run clojure tests
-      run: lein test
-    - name: Run midje tests
+    - name: Run tests
       run: lein midje
