--- a/.github/workflows/run-linters.yml
+++ b/.github/workflows/run-linters.yml
@@ -15,8 +15,8 @@ jobs:
     - name: Install clojure tools
       uses: DeLaGuardo/setup-clojure@3.2
       with:
-        cli: latest
-	lein: latest
+        cli: 'latest'
+	lein: 'latest'
     - name: Install dependencies
       run: lein deps
     - name: Run linters
