--- a/.github/workflows/run-linters.yml
+++ b/.github/workflows/run-linters.yml
@@ -11,13 +11,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
     - name: Install clojure tools
-      uses: DeLaGuardo/setup-clojure@3.2
+    - uses: DeLaGuardo/setup-clojure@3.2
       with:
         cli: 'latest'
 	lein: 'latest'
     - name: Install dependencies
+    - uses: actions/checkout@v2
       run: lein deps
     - name: Run linters
       run: lein lint
