Try to install deps

--- a/.github/workflows/run-linters.yml
+++ b/.github/workflows/run-linters.yml
@@ -19,3 +19,9 @@ jobs:
       with:
         cli: latest
         lein: latest
+
+   - name: Leinigen version
+     run: lein -v
+
+   - name: Install dependencies
+     run: lein deps
