--- a/.github/workflows/run-linters.yml
+++ b/.github/workflows/run-linters.yml
@@ -20,5 +20,5 @@ jobs:
         cli: latest
         lein: latest
 
-    - name: Leinigen version
-      run: lein -v
+    - name: Install dependencies
+      run: lein deps
