--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -6,13 +6,25 @@ on:
       - main
 
 jobs:
-  build:
+  run-tests:
 
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Install clojure tools
+      uses: DeLaGuardo/setup-clojure@3.2
+      with:
+        cli: latest
+        lein: latest
+
     - name: Install dependencies
       run: lein deps
+
+    - name: Leinigen version
+      run: lein -v
+
     - name: Run tests
       run: lein midje
