--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,4 +1,4 @@
-name: Test/Lint Merged
+name: CD Build
 
 on:
  pull_request:
@@ -7,13 +7,18 @@ on:
      - main 
 
 jobs:
-  setup:
-    if: github.event.action == 'closed' && github.event.pull_request.merged == true
+  run-linters:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
+
+      - name: Install java
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '11'
 
       - name: Install clojure tools
         uses: DeLaGuardo/setup-clojure@3.2
@@ -26,19 +31,34 @@ jobs:
 
       - name: Leinigen version
         run: lein -v
-  
-  run-linters:
-    runs-on: ubuntu-latest
-    needs: setup
 
-    steps:
-      - name: Run linters
-        run: lein lint
+      - name: Lint!
+        run: lein 
 
   run-tests:
     runs-on: ubuntu-latest
-    needs: setup
 
     steps:
-      - name: Run tests
-        run: lein midje
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Install java
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '11'
+
+      - name: Install clojure tools
+        uses: DeLaGuardo/setup-clojure@3.2
+        with:
+          cli: latest
+          lein: latest
+
+      - name: Install dependencies
+        run: lein deps
+
+      - name: Leinigen version
+        run: lein -v
+
+      - name: Test
+        run: lein test
