--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         run: lein -v
 
       - name: Lint!
-        run: lein 
+        run: lein lint
 
   run-tests:
     runs-on: ubuntu-latest
