--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         uses: DeLaGuardo/setup-clojure@3.5
         with:
           cli: latest
-          lein: latest
+          lein: 2.9.1
 
       - name: Install dependencies
         run: lein deps
