--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         uses: DeLaGuardo/setup-clojure@3.5
         with:
           cli: latest
-          lein: 2.9.6
+          lein: 2.9.6 # setting b/c latest 2.9.7 broke workflow
 
       - name: Install dependencies
         run: lein deps
