--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,10 @@ jobs:
           java-version: '11'
 
       - name: Install clojure tools
-        uses: DeLaGuardo/setup-clojure@3.2
+        uses: DeLaGuardo/setup-clojure@3.5
         with:
           cli: latest
-          lein: latest
+          lein: 2.9.6 # setting b/c latest 2.9.7 broke workflow
 
       - name: Install dependencies
         run: lein deps
@@ -51,7 +51,7 @@ jobs:
         uses: DeLaGuardo/setup-clojure@3.2
         with:
           cli: latest
-          lein: latest
+          lein: 2.9.6 # setting b/c latest 2.9.7 broke workflow
 
       - name: Install dependencies
         run: lein deps
